# numpy-cli

./: README.md  demo.csv  demo.yaml  pyproject.toml
numpy_cli/: __main__.py
pandas_cli/: __main__.py
